03/02/23 -> HTML/CSS => removed border-bottom from nav links (desktop)
04/02/23 -> CSS => added classes for JS typewritter
04/02/23 -> JS => function typewritter that allows HTML tags & JS arrays
04/02/23 -> JS/HTML => started to create the "homeCodeGame" @ index
05/02/23 -> PHP => fixed redirection when you switched language, now it just refreshes the actual page.
05/02/23 -> PHP => Technos_content page now uses php vars to generate text translation.
05/02/23 -> HTML/CSS => tweaked the technos_content layout => sticky menu on the left when page min-width=1024px
07/02/23 -> HTML/PHP/JS => added data-attr in header that changes with $lang. Allows JS to read what language is used (for the slider in the projects page).
07/02/23 -> JS => added JS function for the auto play checkbox (projects page) + Esc key to close modal.
07/02/23 -> JS => added translations for the slider text (checks the data-attr lang and picks between FR array or EN array).
07/02/23 -> HTML/CSS/PHP => added contact form/style/icons.
07/02/23 -> PHP => PHPMailer + send-mail.php + redirection & message sent/error.
08/02/23 -> HTML/CSS => added CV/Resume page content + style.
08/02/23 -> PHP => added translation's variables for Resume page.
09/02/23 -> PHP => added some missing translations.
25/04/23 -> PHP => added some translate variables (home & project page)
25/04/23 -> HTML/CSS => added some infos in homepage + icons
25/04/23 -> CSS => fixed padding on language settings 'FR' / 'EN'
25/04/23 -> General => Images & icons compression
25/04/23 -> CSS => added Burger menu close icon 
31/05/23 -> Removed 'guess the code langage..'
31/05/23 -> JS/HTML/CSS => added my custom tic-tac-toe game in homepage