@@ -11,7 +11,7 @@
 07/02/23 -> HTML/CSS/PHP => added contact form/style/icons.
 07/02/23 -> PHP => PHPMailer + send-mail.php + redirection & message sent/error.
 08/02/23 -> HTML/CSS => added CV/Resume page content + style.
-08/02/23 -> PHP => added translation's variables for Resume page.
+08/02/23 -> PHP => added translations variables for Resume page.
 09/02/23 -> PHP => added some missing translations.
 25/04/23 -> PHP => added some translate variables (home & project page)
 25/04/23 -> HTML/CSS => added some infos in homepage + icons
@@ -20,3 +20,7 @@
 25/04/23 -> CSS => added Burger menu close icon 
 31/05/23 -> Removed 'guess the code langage..'
 31/05/23 -> JS/HTML/CSS => added my custom tic-tac-toe game in homepage
+31/05/23 -> HTML => removed custom game from homepage
+31/05/23 -> HTML/CSS => modified homepage block disposition to get two separate sections (web dev/ai)
+31/05/23 -> HTML/CSS => added AI skillset + icons
+31/05/23 -> PHP => added translations variables for AI skillset
